appId: com.yingdonglin.tripline
---
- openLink: "tripline://journey/426ca609-e737-4b7c-94d1-31d8e7d20c15/journal"
- assertVisible: "编辑旅程"
- tapOn: "编辑旅程"
- assertVisible: "保存修改"
